Changelog
=========

Possible log types are ``[add]``, ``[bug]``, ``[change]`` and ``[info]``.


---

v1.0.2 (?)

- [bug] Fixed potential crash when user info can't be fetched (#24)
- [change] Updated default caption text (#21)

v1.0.1 (2015-03-05)

- [bug] Fixed potential crash during preview

v1.0.0 (2015-03-01)

- [add] New app icon!
- [add] Translation to German (#8)
- [add] New "about this app" screen (#14)
- [add] Introduction to the app on first launch (#13)
- [change] Some other small bugfixes and improvements

v0.9.6 (2015-02-14)

- [add] Configurable caption text (#7)

v0.9.5 (2015-01-29)

- [add] Handle videos (#6)
- [add] Store previous watermark choice (#11)
- [bug] Fixed logout functionality (#10)

v0.9.4 (2015-01-28)

- [bug] Fixed NullPointerException in MainActivity

v0.9.3 (2015-01-28)

- [add] Don't hide buttons behind keyboard (#1)
- [add] Put current user name in caption (#2)
- [add] Clear URL input on resume (#4)
- [add] URL input validation (#9)