@@ -9,6 +9,7 @@ Possible log types are ``[add]``, ``[bug]``, ``[change]`` and ``[info]``.
 v1.0.2 (?)
 
 - [bug] Fixed potential crash when user info can't be fetched (#24)
+- [add] Added SimpleRepost watermarks (#20)
 - [change] Updated default caption text (#21)
 
 v1.0.1 (2015-03-05)
